<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelocation="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>turtlesim_control_interfaces</name>
  <version>0.0.0</version>
  <description>Service interfaces for turtlesim control</description>
  <maintainer email="gyh20@todo.todo">gyh20</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
